# applied-quantum-computing

./: pyproject.toml
day_2/: picture_to_circuit.ipynb  qubit_and_bit.ipynb
day_4/: T1_measurement_Solution.ipynb  ex1.ipynb
project/: main.py
project/src/: train.py
