[project]
name = "applied-quantum-computing"
version = "0.1.0"
description = ""
authors = [
    {name = "denis.schatzmann@students.fhnw.ch",email = "denis.schatzmann@students.fhnw.ch"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "qiskit (>=2.2.1,<3.0.0)",
    "qiskit-aer (>=0.17.2,<0.18.0)",
    "medmnist (>=3.0.2,<4.0.0)",
    "tensorflow (>=2.20.0,<3.0.0)",
    "qutip (>=5.2.1,<6.0.0)",
    "pylatexenc (>=2.10,<3.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
