[project]
name = "applied-quantum-computing"
version = "0.1.0"
description = ""
authors = [
    {name = "denis.schatzmann@students.fhnw.ch",email = "denis.schatzmann@students.fhnw.ch"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "qiskit (>=1.4,<2.0)",
    "qiskit-machine-learning ==0.8.4",
    "medmnist (>=3.0.2,<4.0.0)",
    "tensorflow (>=2.20.0,<3.0.0)",
    "qutip (>=5.2.1,<6.0.0)",
    "pylatexenc (>=2.10,<3.0)",
    "torch (>=2.6.0,<3.0.0)",
    "torchvision (>=0.21.0,<0.22.0)",
    "torchaudio (>=2.6.0,<3.0.0)",
    "lightning (>=2.5.6,<3.0.0)",
    "wandb (>=0.23.0,<0.24.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "qiskit-aer (>=0.17.2,<0.18.0)",
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
torch = { version = "=2.6.0+cu126", markers = "sys_platform == 'win32'", source = "pytorch" }
torchvision = { version = ">=0.21.0,<0.22.0", markers = "sys_platform == 'win32'", source = "pytorch" }
torchaudio = { version = ">=2.6.0,<3.0.0", markers = "sys_platform == 'win32'", source = "pytorch" }

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu126"
priority = "explicit"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
